syntax = "proto3";

// Package part.v1 отвечает за хранение и предоставление информации о деталях для сборки космических кораблей
package part.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/dfg007star/go_rocket/inventory/pkg/proto/part/v1;part_v1";

// PartService предоставляет информацию о деталях
service PartService {
  // GetPart возвращает информацию о детали по её UUID
  rpc GetPart(GetPartRequest) returns (GetPartResponse);

  // ListParts возвращает список деталей с возможностью фильтрации
  rpc ListParts (ListPartsRequest) returns (ListPartsResponse);
}

// GetPartRequest запрос детали по UUID
message GetPartRequest {
  string uuid = 1;
}

// GetPartResponse отдает делать по UUID
message GetPartResponse {
  Part part = 1;
}

// ListPartsRequest запрос на список деталей с фильтрами
message ListPartsRequest {
  PartsFilter filter = 1;
}

// ListPartsResponse отдает детали после фильтрации
message ListPartsResponse {
  repeated Part parts = 1;
}

// PartsFilter список фильтров для получения деталей
message PartsFilter {
  repeated string uuids = 1;
  repeated string names = 2;
  repeated Category categories = 3;
  repeated string manufacturer_countries = 4;
  repeated string tags = 5;
}

// Part деталь корабля
message Part {
  string uuid = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int64 stock_quantity = 5;
  Category category = 6;
  Dimensions dimensions = 7;
  Manufacturer manufacturer = 8;
  repeated string tags = 9;
  map<string, Value> metadata = 10;
  google.protobuf.Timestamp created_at = 11;
  google.protobuf.Timestamp updated_at = 12;
}

// Category категория детали
enum Category {
  CATEGORY_UNSPECIFIED = 0;
  CATEGORY_ENGINE = 1;
  CATEGORY_FUEL = 2;
  CATEGORY_PORTHOLE = 3;
  CATEGORY_WING = 4;
}

// Dimensions размеры детали
message Dimensions {
  double length = 1;
  double width = 2;
  double height = 3;
  double weight = 4;
}

// Manufacturer информация о производителе детали
message Manufacturer {
  string name = 1;
  string country = 2;
  string website = 3;
}

// Value метаданные детали
message Value {
  oneof value {
    string string_value = 1;
    int64 int64_value = 2;
    double double_value = 3;
    bool bool_value = 4;
  }
}
